<?xml version="1.0" encoding="utf-8" ?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <!-- ===== Display ===== -->
    <PreferenceCategory
        android:title="@string/section_display"
        android:layout="@layout/preference_category_custom"
    />

    <ListPreference
        android:key="@string/pref_key_app_theme"
        android:title="@string/pref_app_theme_title"
        android:summary="@string/pref_app_theme_summary"
        android:entries="@array/app_theme_labels"
        android:entryValues="@array/app_theme_values"
        android:defaultValue="system"
    />

    <SwitchPreferenceCompat
        android:key="@string/pref_key_oled_mode"
        android:title="@string/pref_oled_title"
        android:summary="@string/pref_oled_summary"
        android:defaultValue="false"
    />

    <SwitchPreferenceCompat
        android:key="@string/pref_key_night_mode"
        android:title="@string/pref_night_mode_title"
        android:summary="@string/pref_night_mode_summary"
        android:defaultValue="true"
    />

    <SwitchPreferenceCompat
        android:key="@string/pref_key_battery_enabled"
        android:title="@string/pref_battery_title"
        android:summary="@string/pref_battery_summary"
        android:defaultValue="true"
    />

    <!-- ===== Clock ===== -->
    <PreferenceCategory
        android:title="@string/section_clock"
        android:layout="@layout/preference_category_custom"
    />

    <SwitchPreferenceCompat
        android:key="@string/pref_key_clock_24h"
        android:title="@string/pref_clock_24h_title"
        android:summary="@string/pref_clock_24h_summary"
        android:defaultValue="true"
    />

    <Preference
        android:key="@string/pref_key_face_color_digital"
        android:title="@string/pref_face_color_digital_title"
        android:summary="@string/pref_face_color_digital_summary"
    />

    <Preference
        android:key="@string/pref_key_face_color_analog"
        android:title="@string/pref_face_color_analog_title"
        android:summary="@string/pref_face_color_analog_summary"
    />

    <Preference
        android:key="@string/pref_key_face_color_float"
        android:title="@string/pref_face_color_float_title"
        android:summary="@string/pref_face_color_float_summary"
    />

    <!-- ===== Photos ===== -->
    <PreferenceCategory
        android:title="@string/section_slideshow"
        android:layout="@layout/preference_category_custom"
    />

    <Preference
        android:key="pick_photos"
        android:title="@string/slideshow_pick_photos"
        android:summary="@string/slideshow_no_photos"
    />

    <ListPreference
        android:key="@string/pref_key_slideshow_interval"
        android:title="@string/slideshow_interval"
        android:summary="%s"
        android:entries="@array/slideshow_interval_labels"
        android:entryValues="@array/slideshow_interval_values"
        android:defaultValue="60000"
    />

    <!-- ===== Widgets ===== -->
    <PreferenceCategory
        android:title="@string/section_widgets"
        android:layout="@layout/preference_category_custom"
    />

    <ListPreference
        android:key="@string/pref_key_widget_slot_count"
        android:title="@string/widget_slot_count"
        android:entries="@array/widget_slot_count_labels"
        android:entryValues="@array/widget_slot_count_values"
        android:defaultValue="1"
    />

    <Preference
        android:key="manage_slot_1"
        android:title="@string/widget_manage_slot"
        android:summary="@string/widget_pick_for_slot"
    />

    <ListPreference
        android:key="slot_size_1"
        android:title="@string/pref_slot_size_title"
        android:summary="@string/pref_slot_size_summary"
        android:entries="@array/slot_size_labels"
        android:entryValues="@array/slot_size_values"
        android:defaultValue=""
    />

    <PreferenceCategory
        android:key="spacer_after_slot1"
        android:layout="@layout/preference_category_spacer"
        android:visible="false"
    />

    <Preference
        android:key="manage_slot_2"
        android:title="@string/widget_manage_slot"
        android:summary="@string/widget_pick_for_slot"
        android:visible="false"
    />

    <ListPreference
        android:key="slot_size_2"
        android:title="@string/pref_slot_size_title"
        android:summary="@string/pref_slot_size_summary"
        android:entries="@array/slot_size_labels"
        android:entryValues="@array/slot_size_values"
        android:defaultValue=""
        android:visible="false"
    />

    <PreferenceCategory
        android:key="spacer_after_slot2"
        android:layout="@layout/preference_category_spacer"
        android:visible="false"
    />

    <Preference
        android:key="manage_slot_3"
        android:title="@string/widget_manage_slot"
        android:summary="@string/widget_pick_for_slot"
        android:visible="false"
    />

    <ListPreference
        android:key="slot_size_3"
        android:title="@string/pref_slot_size_title"
        android:summary="@string/pref_slot_size_summary"
        android:entries="@array/slot_size_labels"
        android:entryValues="@array/slot_size_values"
        android:defaultValue=""
        android:visible="false"
    />

    <!-- ===== Auto-start ===== -->
    <PreferenceCategory
        android:title="@string/section_autostart"
        android:layout="@layout/preference_category_custom"
    />

    <Preference
        android:key="auto_start_guide"
        android:title="@string/pref_autostart_title"
        android:summary="@string/pref_autostart_summary"
    />

    <!-- ===== About ===== -->
    <PreferenceCategory
        android:title="@string/section_about"
        android:layout="@layout/preference_category_custom"
    />

    <Preference
        android:key="about_license"
        android:title="@string/about_license"
        android:summary="@string/about_summary"
    />

</PreferenceScreen>
